style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
.container {
  display: flex;
  width: 100vw;
  height: 100vh;

  .side-panel {
    min-width: 30vw;
    background-image: url("./assets/side-img.avif");
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;

    .logo-container {
      height: 100px;
      width: 100%;
      background: rgba(8, 8, 8, 0.5);
      position: absolute;
      top: 20vh;
      display: flex;
      justify-content: center;
      align-items: center;

      img {
        height: 70px;
        width: auto;
      }
    }

    .logo-container span {
      font-family: "Norse";
      color: white;
      font-size: 50px;
    }
  }

  .main {
    min-width: 70vw;
    background-color: #f9fafb;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 15px;

    .top {
      padding: 30px;
      display: flex;
      flex-direction: column;
      gap: 10px;
      width: 80%;
      font-weight: 500;
      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    }

    .form-container {
      display: flex;
      flex-direction: column;
      gap: 10px;
      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;

      .form-data {
        background-color: white;
        padding: 30px;

        .form-input {
          display: grid;
          grid-template-columns: 1fr 1fr;
          column-gap: 0;
          row-gap: 10px;

          label {
            font-size: 11px;
            font-weight: 500;
          }
          input {
            padding: 5px;
            border: 1px solid #e5e7eb;
            border-radius: 5px;
            outline: none;
          }

          input:user-invalid {
            border: 1px solid red;
          }

          input:focus {
            border-color: #007bff; /* blue border */
            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* soft blue glow */
          }
        }
      }

      button {
        background-color: #596d48;
        padding: 15px;
        color: white;
        outline: none;
        border: none;
        border-radius: 5px;
        margin: 20px 30px;
        width: 200px;
        font-weight: 600;
        font-size: 15px;
      }
    }

    .bottom {
      padding-left: 30px;
      display: flex;
      flex-direction: column;
      gap: 10px;
      font-weight: 500;
      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    }
  }
}

